--- a/index.css
+++ b/index.css
@@ -13,10 +13,11 @@ body {
     background-attachment: fixed;
     text-align: justify;
     margin: auto;
-    width: 50%;
-    border: 3px solid black;
+    width: 60%;
+    border: 4px solid black;
     padding: 10px;
     border-radius: 8px;
+    box-shadow: 
 }
 .search {
     text-align:left;
@@ -50,3 +51,10 @@ input[type=text]:focus {
     margin: auto;
     display: block;
   }
+
+.copyright {
+    position: bottom;
+    display: block;
+    text-align: center;
+    font-weight: 100px; 
+}
