--- a/index.css
+++ b/index.css
@@ -76,5 +76,7 @@ input[type=text]:focus {
     max-height: 40%;
     display: block;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
     border: 2px solid black
 }
